# optimal-settings

./: .gitignore  README.md  compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
optimal-settings-backend/: .env  .gitignore  Cargo.toml  Containerfile
optimal-settings-backend/.sqlx/: query-0989fd973fbc6f8ddad1ec9d26d863e3f27fd574664c494200049642e42d09d7.json  query-2433c24b342a90b1b23d9d08acf13b49e2e5aaf6e5fc7df5ac461d845f0c0a42.json  query-30042d7048e8367ccb907ae3faeec6007d98124e618c4e804ee88f60c4795493.json  query-7bff69c61ddec28a930af25f78c54982791b2b3812024a63bb26253d7cf075f2.json  query-879943a1a4f133b6fa02923695419b0255f82dd3d37d1bb81322ec5bc0fcd875.json  query-99a278ea6b9afcae479419dae68a8246eefafe2b88fef186a11760835d021003.json  query-b903653af56d7db3b7c1058bc756203d70167e8bca652349b3787d73fbf6b3d7.json  query-d47260fddffb376bec2fb5f28c1b13017ad9c9d5348a7a87650e178422532dd0.json  query-dc1383bcde51708256697fa133fe3750a420e0fe49cb08597cab131900dfabbf.json
optimal-settings-backend/data/games/: cyberpunk-2077.json  hogwarts-legacy.json  red-dead-redemption-2.json
optimal-settings-backend/data/guides/: anisotropic-filtering.json  anisotropic-filtering.mdx  anti-aliasing.json
optimal-settings-backend/migrations/: 20231121143600_reports.sql  20231121191900_reports.sql  20231229225238_add_captcha_token_field_to_reports.sql
optimal-settings-backend/src/: controllers.rs  error.rs  main.rs  models.rs  repositories.rs  services.rs
optimal-settings-backend/src/controllers/: auth_controller.rs  game_controller.rs  guide_controller.rs  report_controller.rs
optimal-settings-backend/src/models/: auth.rs  game.rs  game_image.rs  game_settings.rs  game_settings_sources.rs  guide.rs  guide_image.rs  report.rs
optimal-settings-backend/src/repositories/: game_repository.rs  guide_repository.rs  report_repository.rs
optimal-settings-backend/src/services/: auth_service.rs  game_service.rs  guide_service.rs  report_service.rs
optimal-settings-frontend/: .env  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
optimal-settings-frontend/src/: middleware.ts
optimal-settings-frontend/src/app/: actions.ts  layout.tsx  page.tsx
optimal-settings-frontend/src/components/: Card.tsx  Collapse.tsx  Form.tsx  FormInput.tsx  FormSelect.tsx  FormSubmitButton.tsx  FormTextarea.tsx  Hero.tsx  SearchBar.tsx  Tab.tsx  TabSwitcher.tsx  Table.tsx  TableBody.tsx  (+3 more)
traefik/: traefik.yml
(+42 files in other folders)
