[package]
name = "optimal-settings-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["tracing"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
anyhow = "1.0.75"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "json", "macros", "time"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
include_dir = "0.7.3"
time = { version = "0.3.30", features = ["macros", "serde-human-readable", "local-offset"] }
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"